--- a/src/pages/Home/index.module.css
+++ b/src/pages/Home/index.module.css
@@ -32,12 +32,12 @@
 
 }
 
-input,
+.input,
 label {
   display: block;
 }
 
-input {
+.input {
   /* margin: 10px auto; */
   /* width: 50%; */
   border: 3px solid green;
