--- a/src/pages/Search/index.module.css
+++ b/src/pages/Search/index.module.css
@@ -16,10 +16,11 @@
   grid-area: sidebar;
   background-color: aqua;
   display: flex;
-  justify-content: flex-end;
+  flex-direction: column;
+  justify-content: flex-start;
   /* flex-wrap: wrap; */
-  align-items: flex-start;
-  align-content: flex-start;
+  align-items: flex-end;
+  /* align-content: flex-start; */
 }
 
 .container {
@@ -62,6 +63,27 @@ main {
   margin: 0.5rem;
 }
 
+.btn {
+  padding: 8px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+  /* width: 150px; */
+  border-radius: 5px;
+  background-color: #5a78c4;
+  color: #ffffff;
+  margin-right: 2rem;
+  display: flex;
+}
+
+.btn:hover {
+  background-color: #ffffff;
+  border: 1px solid #5a78c4;
+  border-radius: 5px;
+  color: #5a78c4;
+}
+
 .active {
   background-color: #ef9a9a;
 }
@@ -81,7 +103,7 @@ main {
   height: 0;
   border-left: 0.5rem solid transparent;
   border-right: 0.5rem solid transparent;
-  border-bottom: 1rem solid black;
+  border-bottom: 1rem solid #ffffff;
   float: right;
 }
 
@@ -90,7 +112,7 @@ main {
   height: 0;
   border-left: 0.5rem solid transparent;
   border-right: 0.5rem solid transparent;
-  border-top: 1rem solid black;
+  border-top: 1rem solid #ffffff;
   float: right;
 }
 
