--- a/src/pages/Home/index.module.css
+++ b/src/pages/Home/index.module.css
@@ -39,7 +39,8 @@ label {
 
 .input {
   /* margin: 10px auto; */
-  /* width: 50%; */
+  width: 50%;
   border: 3px solid green;
-  padding: 10px
+  padding: 10px;
+  margin-left: 25%;
 }
